@@ -1,12 +1,7 @@
 {
-  "count": 6,
-  "uniques": 6,
+  "count": 3,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2024-01-07T00:00:00Z",
-      "count": 3,
-      "uniques": 3
-    },
     {
       "timestamp": "2024-01-08T00:00:00Z",
       "count": 1,
